--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
+    "configstore": "^4.0.0",
     "figlet": "^1.2.0",
+    "fs-extra": "^7.0.0",
     "yargs": "^12.0.2"
   }
 }
