--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "configstore": "^4.0.0",
     "figlet": "^1.2.0",
     "fs-extra": "^7.0.0",
+    "get-pixels": "^3.3.2",
     "handlebars": "^4.0.12",
     "yargs": "^12.0.2"
   }
